--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,10 @@ services:
  reserve:
     image: reserve
     ports:
-      - "2000:2000"
+      - "8000:8000"
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - "./nginx/nginx.conf:/etc/nginx/nginx.conf"
