--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
     "moment": "^2.24.0",
     "sqlite3": "^4.1.0"
   }
