--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,7 +60,7 @@ http {
 
     server {
         listen 80;
-        listen [::]:80
+        listen [::]:80;
         location / {
             proxy_pass http://127.0.0.1:8000;
         }
