--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,7 +62,7 @@ http {
         listen 80;
         listen [::]:80;
         location / {
-            proxy_pass http://127.0.0.1:8000;
+            proxy_pass http://reserve:8000;
         }
     }
 
