add req limit to nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,9 +62,14 @@ http {
         listen 80;
         listen [::]:80;
         location / {
+			limit_req rate=10r/s;
             proxy_pass http://reserve:8000;
         }
     }
+	if ($request_method !~ ^(GET|HEAD|POST)$ )
+	{
+       return 405;
+	}
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
