--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -57,20 +57,20 @@ http {
 	##
 	# Virtual Host Configs
 	##
-
+	limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
     server {
         listen 80;
         listen [::]:80;
         location / {
-			limit_req rate=10r/s;
+			limit_req zone=mylimit;
             proxy_pass http://reserve:8000;
         }
+		if ($request_method !~ ^(GET|HEAD|POST)$ )
+		{
+			return 405;
+		}
     }
-	if ($request_method !~ ^(GET|HEAD|POST)$ )
-	{
-       return 405;
-	}
-
+	limit_req_status 429;
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
     
