add burst value for nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,18 +58,23 @@ http {
 	# Virtual Host Configs
 	##
 	limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
-    server {
+	server {
         listen 80;
         listen [::]:80;
+        location ~ ^/api_reference {
+			limit_req zone=mylimit burst=20;
+            proxy_pass http://reserve:8000;
+        }
         location / {
 			limit_req zone=mylimit;
             proxy_pass http://reserve:8000;
         }
 		if ($request_method !~ ^(GET|HEAD|POST)$ )
 		{
-			return 405;
+				return 405;
 		}
     }
+
 	limit_req_status 429;
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
