add ip blacklist

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -67,6 +67,7 @@ http {
         }
         location / {
 			limit_req zone=mylimit;
+			proxy_set_header   X-Real-IP $remote_addr;
             proxy_pass http://reserve:8000;
         }
 		if ($request_method !~ ^(GET|HEAD|POST)$ )
