--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "sqlite3": "^4.1.0"
   }
